# zig-collections

./: .gitignore  404.html  LICENSE  README.md  build.zig  build.zig.zon  index.html  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  draft-release.yml  zig-build-test.yml
assets/: _mkdocstrings.css
ci/: get_version.py  get_vesion.py
docs/: index.md
search/: search_index.json
src/: root.zig  zig-collections.zig  zig_collections.zig
tests/: build.zig  build.zig.zon  tests.zig
